# file-transfer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/binary/: BinaryReaderWriter.cpp  BinaryReaderWriter.hpp  CMakeLists.txt  PrimitiveConverter.cpp  PrimitiveConverter.hpp
src/helpers/: ByteBuffer.hpp  CMakeLists.txt  Hasher.cpp  Hasher.hpp  IpAddressFormatter.cpp  IpAddressFormatter.hpp  SizeFormatter.cpp  SizeFormatter.hpp  TransferTracker.cpp  TransferTracker.hpp
src/helpers/xxhash/: CMakeLists.txt
src/net/: CMakeLists.txt  Connection.cpp  Connection.hpp  Framing.cpp  Framing.hpp  Port.cpp  Port.hpp
src/net/protocol/: CMakeLists.txt  Packet.hpp  ProtocolConnection.cpp  ProtocolConnection.hpp
src/tools/: CMakeLists.txt  Ip.cpp  Ip.hpp
src/tools/receiver/: CMakeLists.txt  Connection.cpp  Connection.hpp  Receiver.cpp  Receiver.hpp
src/tools/sender/: CMakeLists.txt  CompressionEnv.cpp  CompressionEnv.hpp  Connection.cpp  Connection.hpp  FileListing.cpp  FileListing.hpp  Sender.cpp  Sender.hpp
